[gd_scene load_steps=2 format=2]

[ext_resource path="res://RegisterNewUser.gd" type="Script" id=1]

[node name="RegisterNewUser" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 14.0
text = "Registration For the Free Peoples Union Database!"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = 36.0
margin_right = 601.0
margin_bottom = 605.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2"]
margin_right = 600.0
margin_bottom = 14.0
text = "Enter Guilded Username"

[node name="UsernameText" type="LineEdit" parent="VBoxContainer2"]
margin_top = 18.0
margin_right = 600.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 30 )
placeholder_text = "Type your Guilded Username Here!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="VBoxContainer2"]
margin_top = 52.0
margin_right = 600.0
margin_bottom = 66.0
text = "Enter and Confirm Password Here:"

[node name="PasswordText" type="LineEdit" parent="VBoxContainer2"]
margin_top = 70.0
margin_right = 600.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 30 )
secret = true
placeholder_text = "Create a Unique Password Here!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordText2" type="LineEdit" parent="VBoxContainer2"]
margin_top = 104.0
margin_right = 600.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 30 )
secret = true
placeholder_text = "Confirm your password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="VBoxContainer2"]
margin_top = 138.0
margin_right = 600.0
margin_bottom = 152.0
text = "Choose Your Department From the Drop Down Below!"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer2"]
margin_top = 156.0
margin_right = 600.0
margin_bottom = 176.0
text = "Prospect/Affiliate- No Department"
items = [ "Prospect/Affiliate- No Department", null, false, 0, null, "Department of Defense", null, false, 1, null, "Department of Intelligence", null, false, 2, null, "Department of Finance", null, false, 3, null, "Department of Logistics", null, false, 4, null, "Department of Industry", null, false, 5, null ]
selected = 0

[node name="Label4" type="Label" parent="VBoxContainer2"]
margin_top = 180.0
margin_right = 600.0
margin_bottom = 194.0
text = "Do You Agree To Follow The Rules and Regulations?"

[node name="OptionButton2" type="OptionButton" parent="VBoxContainer2"]
margin_top = 198.0
margin_right = 600.0
margin_bottom = 218.0
text = "True"
items = [ "True", null, false, 0, null, "False", null, false, 1, null ]
selected = 0

[node name="Label5" type="Label" parent="VBoxContainer2"]
margin_top = 222.0
margin_right = 600.0
margin_bottom = 236.0
text = "Please Pick Which Member Status You Like to Have!"

[node name="OptionButton3" type="OptionButton" parent="VBoxContainer2"]
margin_top = 240.0
margin_right = 600.0
margin_bottom = 290.0
rect_min_size = Vector2( 0, 50 )
text = "Prospect"
items = [ "Prospect", null, false, 0, null, "Affiliate", null, false, 1, null, "Member", null, false, 2, null, "Emissary", null, false, 3, null ]
selected = 0

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 1.0
margin_top = 396.0
margin_right = 598.0
margin_bottom = 603.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer3"]
margin_right = 597.0
margin_bottom = 47.0
rect_min_size = Vector2( 30, 47 )
text = "Return To Login Screen/Cancel Registration"

[node name="CompleteRegistration" type="Button" parent="VBoxContainer3"]
margin_top = 51.0
margin_right = 597.0
margin_bottom = 201.0
rect_min_size = Vector2( 40, 150 )
text = "Complete Registration"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer3/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer3/CompleteRegistration" to="." method="_on_CompleteRegistration_pressed"]
